force-app/main/default/objects/ConstructionInfo__c/ConstructionInfo__c.object-meta.xml
<CustomObject>
    <label>工事情報</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>工事情報番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>