force-app/main/default/objects/ConstructionInfo__c/fields/B_CD__c.field-meta.xml
<CustomField>
    <fullName>B_CD__c</fullName>
    <label>部コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>