force-app/main/default/objects/ConstructionInfo__c/fields/BASYO_CD__c.field-meta.xml
<CustomField>
    <fullName>BASYO_CD__c</fullName>
    <label>【削除予定】場所コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>