force-app/main/default/objects/ConstructionInfo__c/fields/BIRU_KBN__c.field-meta.xml
<CustomField>
    <fullName>BIRU_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ビル管理（電力、設備管理）</label>
    <type>Checkbox</type>
</CustomField>