force-app/main/default/objects/ConstructionInfo__c/fields/BOUMUS_KBN__c.field-meta.xml
<CustomField>
    <fullName>BOUMUS_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】防災無線</label>
    <type>Checkbox</type>
</CustomField>