force-app/main/default/objects/ConstructionInfo__c/fields/BOUSAI_KBN__c.field-meta.xml
<CustomField>
    <fullName>BOUSAI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】防災</label>
    <type>Checkbox</type>
</CustomField>