force-app/main/default/objects/ConstructionInfo__c/fields/BU_KBN__c.field-meta.xml
<CustomField>
    <fullName>BU_KBN__c</fullName>
    <label>【削除予定】BU種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>施設</fullName>
                <default>true</default>
                <label>施設</label>
            </value>
            <value>
                <fullName>水処理</fullName>
            </value>
            <value>
                <fullName>官需</fullName>
            </value>
            <value>
                <fullName>交通</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>