force-app/main/default/objects/ConstructionInfo__c/fields/CCTV_KBN__c.field-meta.xml
<CustomField>
    <fullName>CCTV_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ＣＣＴＶ</label>
    <type>Checkbox</type>
</CustomField>