force-app/main/default/objects/ConstructionInfo__c/fields/COLLINS_NO__c.field-meta.xml
<CustomField>
    <fullName>COLLINS_NO__c</fullName>
    <label>コリンズ登録番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>