force-app/main/default/objects/ConstructionInfo__c/fields/ConstructionDistinction__c.field-meta.xml
<CustomField>
    <fullName>ConstructionDistinction__c</fullName>
    <formula>TEXT(Opp6__r.ConstructionDistinction__c)</formula>
    <label>工事区分</label>
    <type>Text</type>
</CustomField>