force-app/main/default/objects/ConstructionInfo__c/fields/ConstructionInfoOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>ConstructionInfoOwnersDivision__c</fullName>
    <formula>TEXT( Owner:User.DepartmentAndDivision__c )</formula>
    <label>所有者の本支社/製作所</label>
    <type>Text</type>
</CustomField>