force-app/main/default/objects/ConstructionInfo__c/fields/DAIRININ_KENMU__c.field-meta.xml
<CustomField>
    <fullName>DAIRININ_KENMU__c</fullName>
    <label>現場代理人との兼務可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可Ａ</fullName>
            </value>
            <value>
                <fullName>不可Ｂ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>