force-app/main/default/objects/ConstructionInfo__c/fields/DAMU_KBN__c.field-meta.xml
<CustomField>
    <fullName>DAMU_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ダムコン・堰コン・頭首工・放流警報</label>
    <type>Checkbox</type>
</CustomField>