force-app/main/default/objects/ConstructionInfo__c/fields/DOURO_KBN__c.field-meta.xml
<CustomField>
    <fullName>DOURO_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】道路</label>
    <type>Checkbox</type>
</CustomField>