force-app/main/default/objects/ConstructionInfo__c/fields/DOUTON_KBN__c.field-meta.xml
<CustomField>
    <fullName>DOUTON_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】道路（トンネル）</label>
    <type>Checkbox</type>
</CustomField>