force-app/main/default/objects/ConstructionInfo__c/fields/ETC_KBN__c.field-meta.xml
<CustomField>
    <fullName>ETC_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ＥＴＣ</label>
    <type>Checkbox</type>
</CustomField>