force-app/main/default/objects/ConstructionInfo__c/fields/FROM_K_YMD_1__c.field-meta.xml
<CustomField>
    <fullName>FROM_K_YMD_1__c</fullName>
    <label>工事期間登録開始日1</label>
    <type>Date</type>
</CustomField>