force-app/main/default/objects/ConstructionInfo__c/fields/FROM_K_YMD_3__c.field-meta.xml
<CustomField>
    <fullName>FROM_K_YMD_3__c</fullName>
    <label>【削除予定】工事期間登録開始日3</label>
    <type>Date</type>
</CustomField>