force-app/main/default/objects/ConstructionInfo__c/fields/GESUI_KBN__c.field-meta.xml
<CustomField>
    <fullName>GESUI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】下水</label>
    <type>Checkbox</type>
</CustomField>