force-app/main/default/objects/ConstructionInfo__c/fields/GESUI_RYO__c.field-meta.xml
<CustomField>
    <fullName>GESUI_RYO__c</fullName>
    <label>【削除予定】下水処理量</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>