force-app/main/default/objects/ConstructionInfo__c/fields/GESUIP_KBN__c.field-meta.xml
<CustomField>
    <fullName>GESUIP_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】下水（ポンプ場）</label>
    <type>Checkbox</type>
</CustomField>