force-app/main/default/objects/ConstructionInfo__c/fields/GESUIP_RYO__c.field-meta.xml
<CustomField>
    <fullName>GESUIP_RYO__c</fullName>
    <label>【削除予定】下水（ポンプ場）処理量</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>