force-app/main/default/objects/ConstructionInfo__c/fields/GIJUTSUSHA_2__c.field-meta.xml
<CustomField>
    <fullName>GIJUTSUSHA_2__c</fullName>
    <description>工事情報に配置される技術者名を入力するテキスト項目。※旧参照項目（MAN_2）からテキスト化。</description>
    <label>技術者2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>