force-app/main/default/objects/ConstructionInfo__c/fields/GIJUTSUSHA_KBN__c.field-meta.xml
<CustomField>
    <fullName>GIJUTSUSHA_KBN__c</fullName>
    <label>技術者区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>監理技術者(電)</fullName>
            </value>
            <value>
                <fullName>監理技術者(通)</fullName>
            </value>
            <value>
                <fullName>【削除予定】監理技術者(電)(通)</fullName>
            </value>
            <value>
                <fullName>監理技術者(機)</fullName>
            </value>
            <value>
                <fullName>主任技術者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>