force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_FUYE__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_FUYE__c</fullName>
    <label>配置不要(中断)期間_(終)</label>
    <type>Date</type>
</CustomField>