force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_FUYS__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_FUYS__c</fullName>
    <label>配置不要(中断)期間_(始)</label>
    <type>Date</type>
</CustomField>