force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_GENIE__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_GENIE__c</fullName>
    <label>配置必要期間_現地工事期間(終)</label>
    <type>Date</type>
</CustomField>