force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_GENIS__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_GENIS__c</fullName>
    <label>配置必要期間_現地工事期間(始)</label>
    <type>Date</type>
</CustomField>