force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_JUMBI__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_JUMBI__c</fullName>
    <label>技術者配置の準備</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>