force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_KIKIE__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_KIKIE__c</fullName>
    <label>配置必要期間_機器製作期間(終)</label>
    <type>Date</type>
</CustomField>