force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_KIKIS__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_KIKIS__c</fullName>
    <label>配置必要期間_機器製作期間(始)</label>
    <type>Date</type>
</CustomField>