force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_SEKININ_BASHO__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_SEKININ_BASHO__c</fullName>
    <label>技術者の配置責任場所</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本プラ建</fullName>
            </value>
            <value>
                <fullName>西プラ建</fullName>
            </value>
            <value>
                <fullName>中プラ建</fullName>
            </value>
            <value>
                <fullName>九プラ建</fullName>
            </value>
            <value>
                <fullName>北プラ建</fullName>
            </value>
            <value>
                <fullName>通電</fullName>
            </value>
            <value>
                <fullName>C電郡山</fullName>
            </value>
            <value>
                <fullName>鎌電</fullName>
            </value>
            <value>
                <fullName>神電公共</fullName>
            </value>
            <value>
                <fullName>神電社共</fullName>
            </value>
            <value>
                <fullName>神電他</fullName>
            </value>
            <value>
                <fullName>Ｃ電伊丹</fullName>
            </value>
            <value>
                <fullName>京電</fullName>
            </value>
            <value>
                <fullName>配電</fullName>
            </value>
            <value>
                <fullName>長電</fullName>
            </value>
            <value>
                <fullName>ＭＰＥＣ</fullName>
            </value>
            <value>
                <fullName>ＳＣ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>