force-app/main/default/objects/ConstructionInfo__c/fields/HAICHI_STATUS__c.field-meta.xml
<CustomField>
    <fullName>HAICHI_STATUS__c</fullName>
    <label>技術者の配置状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>配置済</fullName>
            </value>
            <value>
                <fullName>配置予定</fullName>
            </value>
            <value>
                <fullName>未配置（案有）</fullName>
            </value>
            <value>
                <fullName>未配置（未定）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>