force-app/main/default/objects/ConstructionInfo__c/fields/HAITI_K_NAI_1__c.field-meta.xml
<CustomField>
    <fullName>HAITI_K_NAI_1__c</fullName>
    <label>工事期間配置内容1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>機器製作＋工事期間</fullName>
            </value>
            <value>
                <fullName>現地工事期間のみ</fullName>
            </value>
            <value>
                <fullName>機器製作期間のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>