force-app/main/default/objects/ConstructionInfo__c/fields/HAITI_KBN_2__c.field-meta.xml
<CustomField>
    <fullName>HAITI_KBN_2__c</fullName>
    <label>【削除予定】配置区分2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>監理技術者</fullName>
            </value>
            <value>
                <fullName>主任技術者（専任）</fullName>
            </value>
            <value>
                <fullName>主任技術者（非専任）</fullName>
            </value>
            <value>
                <fullName>担当技術者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>