force-app/main/default/objects/ConstructionInfo__c/fields/HOMSAK_KBN__c.field-meta.xml
<CustomField>
    <fullName>HOMSAK_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ホーム柵</label>
    <type>Checkbox</type>
</CustomField>