force-app/main/default/objects/ConstructionInfo__c/fields/HYOSYO__c.field-meta.xml
<CustomField>
    <fullName>HYOSYO__c</fullName>
    <label>【削除予定】表彰獲得</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>無</fullName>
                <default>true</default>
                <label>無</label>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>