force-app/main/default/objects/ConstructionInfo__c/fields/HYOSYO_CMT__c.field-meta.xml
<CustomField>
    <fullName>HYOSYO_CMT__c</fullName>
    <label>【削除予定】表彰獲得名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>