force-app/main/default/objects/ConstructionInfo__c/fields/HYOSYO_YMD__c.field-meta.xml
<CustomField>
    <fullName>HYOSYO_YMD__c</fullName>
    <label>【削除予定】表彰獲得受賞日</label>
    <type>Date</type>
</CustomField>