force-app/main/default/objects/ConstructionInfo__c/fields/HYOU_TEN__c.field-meta.xml
<CustomField>
    <fullName>HYOU_TEN__c</fullName>
    <label>【削除予定】工事評点</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>