force-app/main/default/objects/ConstructionInfo__c/fields/JIKHATDG_KBN__c.field-meta.xml
<CustomField>
    <fullName>JIKHATDG_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】自家発（ＤＧ）</label>
    <type>Checkbox</type>
</CustomField>