force-app/main/default/objects/ConstructionInfo__c/fields/JIKHATDG_KVA__c.field-meta.xml
<CustomField>
    <fullName>JIKHATDG_KVA__c</fullName>
    <label>【削除予定】自家発（ＤＧ）KVA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>