force-app/main/default/objects/ConstructionInfo__c/fields/JIKHATGTG_KBN__c.field-meta.xml
<CustomField>
    <fullName>JIKHATGTG_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】自家発（ＧTG）</label>
    <type>Checkbox</type>
</CustomField>