force-app/main/default/objects/ConstructionInfo__c/fields/JR_KBN__c.field-meta.xml
<CustomField>
    <fullName>JR_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】JR</label>
    <type>Checkbox</type>
</CustomField>