force-app/main/default/objects/ConstructionInfo__c/fields/JV_KBN__c.field-meta.xml
<CustomField>
    <fullName>JV_KBN__c</fullName>
    <label>JV区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通常</fullName>
            </value>
            <value>
                <fullName>甲型JVスポンサー</fullName>
            </value>
            <value>
                <fullName>甲型JVサブ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>