force-app/main/default/objects/ConstructionInfo__c/fields/JYOSUI_KBN__c.field-meta.xml
<CustomField>
    <fullName>JYOSUI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】上水</label>
    <type>Checkbox</type>
</CustomField>