force-app/main/default/objects/ConstructionInfo__c/fields/JYOSUI_RYO__c.field-meta.xml
<CustomField>
    <fullName>JYOSUI_RYO__c</fullName>
    <label>【削除予定】上水処理量</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>