force-app/main/default/objects/ConstructionInfo__c/fields/JYOSUIP_KBN__c.field-meta.xml
<CustomField>
    <fullName>JYOSUIP_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】上水（ポンプ場）</label>
    <type>Checkbox</type>
</CustomField>