force-app/main/default/objects/ConstructionInfo__c/fields/JYUHENK_KBN__c.field-meta.xml
<CustomField>
    <fullName>JYUHENK_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】受変電（高圧）</label>
    <type>Checkbox</type>
</CustomField>