force-app/main/default/objects/ConstructionInfo__c/fields/JYUHENK_KVA__c.field-meta.xml
<CustomField>
    <fullName>JYUHENK_KVA__c</fullName>
    <label>【削除予定】受変電（高圧）KVA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>