force-app/main/default/objects/ConstructionInfo__c/fields/JYUHENT_KBN__c.field-meta.xml
<CustomField>
    <fullName>JYUHENT_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】受変電（特高）</label>
    <type>Checkbox</type>
</CustomField>