force-app/main/default/objects/ConstructionInfo__c/fields/JYUHENT_KVA__c.field-meta.xml
<CustomField>
    <fullName>JYUHENT_KVA__c</fullName>
    <label>【削除予定】受変電（特高）KVA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>