force-app/main/default/objects/ConstructionInfo__c/fields/JYUHENT_V__c.field-meta.xml
<CustomField>
    <fullName>JYUHENT_V__c</fullName>
    <label>【削除予定】受変電（特高）V</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>