force-app/main/default/objects/ConstructionInfo__c/fields/KANKISEI_KBN__c.field-meta.xml
<CustomField>
    <fullName>KANKISEI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】換気制御</label>
    <type>Checkbox</type>
</CustomField>