force-app/main/default/objects/ConstructionInfo__c/fields/KANRI_KBN__c.field-meta.xml
<CustomField>
    <fullName>KANRI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】運用、電力、設備管理</label>
    <type>Checkbox</type>
</CustomField>