force-app/main/default/objects/ConstructionInfo__c/fields/KEISATU_KBN__c.field-meta.xml
<CustomField>
    <fullName>KEISATU_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】警察</label>
    <type>Checkbox</type>
</CustomField>