force-app/main/default/objects/ConstructionInfo__c/fields/KEISOU_KBN__c.field-meta.xml
<CustomField>
    <fullName>KEISOU_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】計装設備</label>
    <type>Checkbox</type>
</CustomField>