force-app/main/default/objects/ConstructionInfo__c/fields/KEIYAKU_KBN__c.field-meta.xml
<CustomField>
    <fullName>KEIYAKU_KBN__c</fullName>
    <label>契約区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>建設工事</fullName>
            </value>
            <value>
                <fullName>物品製造</fullName>
            </value>
            <value>
                <fullName>業務委託</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>