force-app/main/default/objects/ConstructionInfo__c/fields/KENSET_KBN__c.field-meta.xml
<CustomField>
    <fullName>KENSET_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】建設</label>
    <type>Checkbox</type>
</CustomField>