force-app/main/default/objects/ConstructionInfo__c/fields/KOUEI_KBN__c.field-meta.xml
<CustomField>
    <fullName>KOUEI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】公営</label>
    <type>Checkbox</type>
</CustomField>