force-app/main/default/objects/ConstructionInfo__c/fields/KOUGYO_KBN__c.field-meta.xml
<CustomField>
    <fullName>KOUGYO_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】工業用水</label>
    <type>Checkbox</type>
</CustomField>