force-app/main/default/objects/ConstructionInfo__c/fields/KOUKIF_YMD__c.field-meta.xml
<CustomField>
    <fullName>KOUKIF_YMD__c</fullName>
    <label>工期FROM</label>
    <type>Date</type>
</CustomField>