force-app/main/default/objects/ConstructionInfo__c/fields/KOUKIT_YMD__c.field-meta.xml
<CustomField>
    <fullName>KOUKIT_YMD__c</fullName>
    <label>工期TO</label>
    <type>Date</type>
</CustomField>