force-app/main/default/objects/ConstructionInfo__c/fields/KOUKYO_KBN__c.field-meta.xml
<CustomField>
    <fullName>KOUKYO_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】公共（防衛、文科省、公営競技場、ＪＲＡ　他）</label>
    <type>Checkbox</type>
</CustomField>