force-app/main/default/objects/ConstructionInfo__c/fields/MAN_1__c.field-meta.xml
<CustomField>
    <fullName>MAN_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>【参照】技術者1</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>工事情報 (技術者1)</relationshipLabel>
    <relationshipName>MAN_1ConstructionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>