force-app/main/default/objects/ConstructionInfo__c/fields/MAN_2__c.field-meta.xml
<CustomField>
    <fullName>MAN_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>【参照】技術者2</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>工事情報 (技術者2)</relationshipLabel>
    <relationshipName>MAN_2ConstructionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>