force-app/main/default/objects/ConstructionInfo__c/fields/MAN_3__c.field-meta.xml
<CustomField>
    <fullName>MAN_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>【参照】技術者3</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>工事情報 (技術者3)</relationshipLabel>
    <relationshipName>MAN_3ConstructionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>