force-app/main/default/objects/ConstructionInfo__c/fields/MINKAN_KBN__c.field-meta.xml
<CustomField>
    <fullName>MINKAN_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】民間</label>
    <type>Checkbox</type>
</CustomField>