force-app/main/default/objects/ConstructionInfo__c/fields/MOTOSHITA_KBN__c.field-meta.xml
<CustomField>
    <fullName>MOTOSHITA_KBN__c</fullName>
    <label>元請下請区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>元請</fullName>
            </value>
            <value>
                <fullName>下請</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>