force-app/main/default/objects/ConstructionInfo__c/fields/NOUGYO_KBN__c.field-meta.xml
<CustomField>
    <fullName>NOUGYO_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】農業</label>
    <type>Checkbox</type>
</CustomField>