force-app/main/default/objects/ConstructionInfo__c/fields/NYUSATSU_KBN__c.field-meta.xml
<CustomField>
    <fullName>NYUSATSU_KBN__c</fullName>
    <label>入札区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>公募</fullName>
            </value>
            <value>
                <fullName>指名</fullName>
            </value>
            <value>
                <fullName>随契</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>