force-app/main/default/objects/ConstructionInfo__c/fields/ODEI_KBN__c.field-meta.xml
<CustomField>
    <fullName>ODEI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】汚泥設備</label>
    <type>Checkbox</type>
</CustomField>