force-app/main/default/objects/ConstructionInfo__c/fields/OOGAT_KBN__c.field-meta.xml
<CustomField>
    <fullName>OOGAT_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】大型映像</label>
    <type>Checkbox</type>
</CustomField>