force-app/main/default/objects/ConstructionInfo__c/fields/OOGAT_M2__c.field-meta.xml
<CustomField>
    <fullName>OOGAT_M2__c</fullName>
    <label>【削除予定】大型映像㎡</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>