force-app/main/default/objects/ConstructionInfo__c/fields/Opp6__c.field-meta.xml
<CustomField>
    <fullName>Opp6__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>工事情報</relationshipLabel>
    <relationshipName>ConstructionInfo</relationshipName>
    <type>Lookup</type>
</CustomField>