force-app/main/default/objects/ConstructionInfo__c/fields/ORDER_NO__c.field-meta.xml
<CustomField>
    <fullName>ORDER_NO__c</fullName>
    <label>工事番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>