force-app/main/default/objects/ConstructionInfo__c/fields/OZON_KBN__c.field-meta.xml
<CustomField>
    <fullName>OZON_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】オゾン</label>
    <type>Checkbox</type>
</CustomField>