force-app/main/default/objects/ConstructionInfo__c/fields/SAIKOKYA_MEI__c.field-meta.xml
<CustomField>
    <fullName>SAIKOKYA_MEI__c</fullName>
    <label>【削除予定】最終顧客名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>