force-app/main/default/objects/ConstructionInfo__c/fields/SASIMO_CMT__c.field-meta.xml
<CustomField>
    <fullName>SASIMO_CMT__c</fullName>
    <label>差戻コメント</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>